kubernetes/argocd/argocd-app/stateful/jellyfin/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  serviceName: jellyfin
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1003
        runAsGroup: 1003
        fsGroup: 1003
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: cache
        emptyDir: {}
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.11.11@sha256:aefb67e6a7ff1debdd154a78a7bbb780fd0c873d8639210a7f6a2016ad2b35db
        resources:
          requests:
            memory: 512Mi
          limits:
            memory: 1Gi
        ports:
        - name: http
          containerPort: 8096
        volumeMounts:
        - name: config
          mountPath: /config
        - name: cache
          mountPath: /cache
        - name: media
          mountPath: /data
          readOnly: true
