kubernetes/argocd/argocd-app/stateful/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  clusterIP: None
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 8096
    targetPort: 8096
